[tool.poetry]
name = "dash-starter"
version = "0.1.0"
description = "This is just a starter template for Plotly Dash on Heroku"
authors = ["Kaj Siebert <kaj@k-si.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.12"
dash = "^2.0.0"
pandas = "^1.3.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
